--- a/curso-docker/exercicio-volume/html/index.html
+++ b/curso-docker/exercicio-volume/html/index.html
@@ -8,5 +8,14 @@
     <body>
         <h1>Curso de docker</h1>
         <p>Exemplo nginx</p>
+        <p>teste 2</p>
+        <div>
+            <ul>
+                <li>coisa adicionada 1</li>
+                <li>coisa adicionada 2</li>
+                <li>coisa adicionada 3</li>
+                <li>coisa adicionada 4</li>
+            </ul>
+        </div>
     </body>
 </html>
